--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,7 @@
 <h1 style="color:rgb(83, 80, 80)">
-  Welcome To Our Shop!
+  Welcome to Shopify!
 </h1>
 
-<h3 class="loginAdvice">Please <a href="/login"> Log in!</a> ,You are newbie? <i class="fas fa-arrow-circle-right"></i> <a href="/register">Register!</a></h3>
+<h3 class="loginAdvice">Please <a href="/login"> Log in!</a> </h3>
+<h1>Anyone, anywhere, can start a business<i class="fas fa-arrow-circle-right"></i> <a href="/register">Start Free Trial!</a></h1>
+<p>Try Shopify free for 14 days, no credit card required. By registering, you agree to receive marketing emails from Shopify.</p>
