--- a/views/signUpForm.hbs
+++ b/views/signUpForm.hbs
@@ -43,9 +43,9 @@
     <div class="col-md-12 mt-3">
        <label for="inputRole" class="form-label">Role</label>
       <select class="form-select" aria-label="Default select example" name="role" required>
-        <option selected>Choose your Role</option>
-        <option value="administrator">administrator</option>
-        <option value="employee">employee</option>
+        <option selected>Choose Role</option>
+        <option value="administrator">Administrator</option>
+        <option value="employee">Employee</option>
       </select>
     </div>
 
