--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,4 +1,4 @@
-<h1>Welcome to User Page {{userQuery.name}}</h1>
+<h1>User Page {{userQuery.name}}</h1>
 
 {{#if userQuery.deleted}}
  <div class='alert alert-warning text-center  mt-3 mb-3' role='alert'>
@@ -6,7 +6,7 @@
   </div>
 {{/if}}
 <h2>Update Products:</h2>
-<form action="/login/productuser" method="POST" class="form mb-4">
+<form action="/login/user" method="POST" class="form mb-4">
     <label>Title</label>
     <input type="text" class="form-control" name="title">
     <label>Price</label>
@@ -33,8 +33,8 @@
                 Price : {{price}} $
             </p>
             <h5 class="card-title"> Discount:{{discount}}%</h5>
-            <a href="/login/productuser/update/{{_id}}" class="btn btn-primary">Update</a>
-            <a href="/login/productuser/delete/{{_id}}" class="btn btn-warning">Delete</a>
+            <a href="/login/user/update/{{_id}}" class="btn btn-primary">Update</a>
+            <a href="/login/user/delete/{{_id}}" class="btn btn-warning">Delete</a>
         </div>
         {{/each}}
     </div>
