addmin rolse changed

--- a/views/signUpForm.hbs
+++ b/views/signUpForm.hbs
@@ -10,7 +10,7 @@
    
     <div class="col-md-6 ">
       <label for="inputEmail4" class="form-label">Email</label>
-      <input type="email" class="form-control" id="inputEmail4" name="email" placeholder="johndoe@mail.com"  required/>
+      <input type="email" class="form-control" id="inputEmail4" name="email" placeholder="example@email.com"  required/>
     </div>
 
     <div class="col-md-6">
@@ -20,7 +20,7 @@
 
     <div class="col-6">
       <label for="inputName" class="form-label">Name</label>
-      <input type="text" class="form-control" id="name" name="name" placeholder="John Doe" />
+      <input type="text" class="form-control" id="name" name="name" placeholder="Write your name" />
     </div>
 
     <div class="col-md-6">
@@ -30,12 +30,16 @@
 
     <div class="col-md-6">
       <label for="inputAdress" class="form-label">Adress</label>
-      <input type="text" class="form-control" id="inputAdress" name="address" />
+      <input type="text" class="form-control" id="inputAdress" name="address" placeholder="Example: Duerrenberger Str. 5"/>
+    </div>
+    <div class="col-md-6">
+      <label for="inputAdress" class="form-label">City and Zip Code</label>
+      <input type="text" class="form-control" id="inputAdress" name="address" placeholder="Example: Leipzig, 04177"/>
     </div>
 
     <div class="col-md-12 ">
       <label for="inputSalary" class="form-label">Salary</label>
-      <input type="number" class="form-control" id="inputSalary" name="salary" />
+      <input type="number" class="form-control" id="inputSalary" name="salary" placeholder="Example: 47000€ "/>
       </div>
 
    
