--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -56,6 +56,7 @@
                 <th>E-mail</th>
                 <th>Country</th>
                 <th>Address</th>
+                <th>City and Zip Code</th>
                 <th>Salary</th>
                 <th>Role</th>
                 <th>Delete</th>
@@ -67,6 +68,7 @@
                 <td>{{email}}</td>
                 <td>{{country}}</td>
                 <td>{{address}}</td>
+                <td>{{city_zip_code}}</td>
                 <td>{{salary}}</td>
                 <td>{{role}}</td>
                 <td><button class="btn btn-danger"><a href="/login/admin/delete/{{_id}}">Delete</a></button></td>
