--- a/views/login.hbs
+++ b/views/login.hbs
@@ -46,14 +46,18 @@
     </a>
 
     
-    <p class="mt-3">
-      By cliking the Submit Button you agree to
-      <a href='#'>
-        Terms & Conditions
-      </a>
-      and
-      <a href='#'>
-        Privacy Policy
-      </a>
-    </p>
+    {{!-- Terms & agreements --}}
+                <div class="col-md-12 my-4">
+                    <div class="form-group">
+                        <div class="w-100">
+                               
+                            <label class="checkbox-wrap checkbox-primary w-100">
+                                I agree all statements in terms of service
+                               <input type="checkbox" unchecked>
+                                <span class="checkmark">
+                                    </span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
   </form>
