--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,9 +11,6 @@
     <h1>
       Log In
     </h1>
-    <p>
-      Please to enter your credential to access the product catalogue
-    </p>
     <hr />
     <label for='E-mail'>
       <b>
@@ -42,7 +39,7 @@
     </a>
     
      <a href='/register' class='buttons-submit' type='submit'>
-      Not Register yet!
+      Click here if you want to register!
     </a>
 
     
