--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,42 +1,105 @@
-<h1>User Page {{userQuery.name}}</h1>
+<h1>Welcome to User Page {{userQuery.name}}</h1>
 
 {{#if userQuery.deleted}}
- <div class='alert alert-warning text-center  mt-3 mb-3' role='alert'>
-    <h4 class="font-weight-bolder m-0">{{userQuery.deleteMessage}}</h4>
-  </div>
-{{/if}}
-<h2>Update Products:</h2>
-<form action="/login/user" method="POST" class="form mb-4">
-    <label>Title</label>
-    <input type="text" class="form-control" name="title">
-    <label>Price</label>
-    <input type="number" class="form-control" name="price">
-    <label>Discount</label>
-    <input type="text" class="form-control" name="discount">
-    <label>Quantity</label>
-    <input type="number" class="form-control" name="quantity">
-    <br>
-    <button type="submit" class="btn btn-success">
-        Add New Product
-    </button>
-</form>
-
-{{!-- Nico Card --}}
-<h2>My Daily Products</h2>
-{{#if product}}
-<div class="d-flex justify-content-start px-5 mx-auto my-4 mr-2">
-    {{#each product}}
-    <div class="card mr-2" >
-        <div class="card-body">
-            <h5 class="card-title">{{title}}</h5>
-            <p class="card-text">
-                Price : {{price}} $
-            </p>
-            <h5 class="card-title"> Discount:{{discount}}%</h5>
-            <a href="/login/user/update/{{_id}}" class="btn btn-primary">Update</a>
-            <a href="/login/user/delete/{{_id}}" class="btn btn-warning">Delete</a>
-        </div>
-        {{/each}}
-    </div>
+<div class='alert alert-warning text-center  mt-1 mb-3' role='alert'>
+  <h4 class="font-weight-bolder m-0">{{userQuery.deleteMessage}}</h4>
 </div>
 {{/if}}
+
+{{#if userQuery.update}}
+<div class='alert alert-warning text-center  mt-3 mb-3' role='alert'>
+  <h4 class="font-weight-bolder m-0">{{userQuery.deleteMessage}}</h4>
+</div>
+{{/if}}
+
+<div class="col-md-4 mx-auto">
+  <div class="card">
+    <div class="card-header">
+      <h3>Add a New </h3>
+    </div>
+    <div class="card-body">
+      <form action="/login/user" method="POST">
+        <label> Title</label>
+        <input type="text" class="form-control" name="title">
+        <label>Price</label>
+        <input type="number" class="form-control" name="price">
+        <label>Discount</label>
+        <input type="text" class="form-control" name="discount">
+        <label>Quantity</label>
+        <input type="number" class="form-control" name="quantity">
+        <div class="form-group">
+          <button class="mt-5 btn btn-primary btn-block" type="submit">
+            Save
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+{{#if }}
+<div class="container mt-5 mb-5">
+  <div class="d-flex justify-content-center row">
+    <h2>My Daily s</h2>
+    <div class="col-md-10">
+      {{#each }}
+      <div class="row p-2 bg-white border rounded">
+
+        <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded -image"
+            src="https://i.imgur.com/JvPeqEF.jpg"></div>
+
+        <div class="col-md-6 mt-1">
+          <h5>{{title}}</h5>
+          <div class="d-flex flex-row">
+            <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
+                class="fa fa-star"></i></div><span>310</span>
+          </div>
+
+          <h6 class="text-success"> Discount: {{discount}}%</h6>
+        </div>
+        <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+          <div class="d-flex flex-row align-items-center">
+            <h4 class="mr-1">${{price}}</h4><span class="strike-text">$20.99</span>
+
+          </div>
+          <h6 class="text-success">Free shipping</h6>
+          <h6 class="text-success">Quantity: {{quantity}}</h6>
+
+          <div class="d-flex flex-column mt-4">
+            <a href="/login/user/update/{{_id}}"
+              class=" mt-1 btn btn-primary">Update</a><a href="/login/user/delete/{{_id}}"
+              class=" mt-1 btn btn-warning">Delete</a></div>
+        </div>
+
+      </div>
+      {{/each}}
+    </div>
+  </div>
+</div>
+</div>
+{{/if}} 
+
+<div class="userList">
+            <h2 class="text-center">My User List</h2>
+            {{#if users}}
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>E-mail</th>
+                    <th>Country</th>
+                    <th>Address</th>
+                    <th>Salary</th>
+                    <th>Role</th>
+                </tr>
+                {{#each users}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>{{email}}</td>
+                    <td>{{country}}</td>
+                    <td>{{address}}</td>
+                    <td>{{salary}}</td>
+                    <td>{{role}}</td>
+                </tr>
+                {{/each}}
+            </table>
+            {{/if}}
+        </div>
