MVC model is updated

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,47 +1,11 @@
-<h1 style="color:rgb(83, 80, 80)">
-  Welcome to Shopify!
-</h1>
+<div class="header">
+    <div class="home-container text-center">
+      <h1> Welcome to Shopify 👋🏼 </h1>
+    
+      <h2 class="my-4"> Anyone, anywhere, can start a business 📍 </h2>
 
-<h3 class="loginAdvice"><a href="/login"> Log in!</a> </h3>
-<h1>Anyone, anywhere, can start a business<i class="fas fa-arrow-circle-right"></i> <a href="/register">Start Free Trial!</a></h1>
-<p>Try Shopify free for 14 days, no credit card required. By registering, you agree to receive marketing emails from Shopify.</p>
-
-<nav>
-    <div class="homeProduct">
-      <a class="home" href="/">Shopify</a>
+      <p>Try for 14 days, no credit card required </p> 
+        
+       <u> By registering, you agree to receive marketing emails from Shopify</u>
     </div>
-  </nav>
- 
-  <main class="container p-2"></main>
-   <footer class="footer-distributed">
-			<div class="footer-left">
-				<h3><span> Shopify</span></h3>
-				<p class="footer-links">
-					<a href="#">Home</a>
-					<a href="#">Contact</a>
-				</p>
-				<p class="footer-company-name">Shopify &copy; 2021</p>
-			</div>
-			<div class="footer-center">
-				<div>
-					<i class="fa fa-map-marker"></i>
-					<p><span></span> Berlin</p>
-				</div>
-				<div>
-					<i class="fa fa-phone"></i>
-					<p>+49 5555-555--55</p>
-				</div>
-				<div>
-					<i class="fa fa-envelope"></i>
-					<p><a href="https://www.gmail.com">Shoppy@gmail.de</a></p>
-				</div>
-			</div>
-			<div class="footer-right">
-				<div class="footer-icons">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
-				</div>
-			</div>
-		</footer>
+</div>
