--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,24 +1,11 @@
-<div class="p-3">
-<h1>Welcome to Admin Page {{userQuery.name}}</h1>
+<h1>Admin Account {{userQuery.name}}</h1>
 {{#if userQuery.deleted}}
-<div class='alert alert-danger text-center  mt-3 mb-3' role='alert'>
+<div class='alert alert-warning text-center  mt-3 mb-3' role='alert'>
     <h4 class="font-weight-bolder m-0">{{userQuery.deleteMessage}}</h4>
 </div>
 {{/if}}
-{{#if userQuery.created}}
-<div class='alert alert-success text-center  mt-3 mb-3' role='alert'>
-    <h4 class="font-weight-bolder m-0">{{userQuery.newUserMessage}}</h4>
-</div>
-{{/if}}
 
-
-<div class="col-md-4 mx-auto">
-  <div class="card">
-    <div class="card-header">
-      <h3>Update Employees:</h3>
-    </div>
-    <div class="card-body">
-      <form action="/login/admin" method="POST" >
+<form action="/login/admin" method="POST" class="form mb-4">
     <label>Name</label>
     <input type="text" class="form-control" name="name" required>
     <label>E-mail</label>
@@ -29,63 +16,57 @@
     <input type="text" class="form-control" name="country">
     <label>Address</label>
     <input type="text" class="form-control" name="address">
+    <label>Zip</label>
+    <input type="text" class="form-control" name="zip">
     <label>Salary</label>
     <input type="number" class="form-control mb-2" name="salary">
     <label>Role</label>
     <select class="form-select" aria-label="Default select example" name="role" required>
-        <option selected>Choose Role</option>
-        <option value="administrator">Administrator</option>
-        <option value="employee">Employee</option>
+        <option selected>Choose</option>
+        <option value="Administrator">Administrator</option>
+        <option value="Employee">User</option>
     </select>
     <br>
-    <button type="submit" class="btn btn-success">
+    <div>
+        <button type="submit" class="btn btn-success mb-4">
         Add New User
     </button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-
-
-    <div class="my-5">
-        <div class="userList">
-            <h2>My User List</h2>
-            {{#if users}}
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>E-mail</th>
-                    <th>Country</th>
-                    <th>Address</th>
-                    <th>Salary</th>
-                    <th>Role</th>
-                    <th>Delete</th>
-                    <th>Update</th>
-                </tr>
-                {{#each users}}
-                <tr>
-                    <td>{{name}}</td>
-                    <td>{{email}}</td>
-                    <td>{{country}}</td>
-                    <td>{{address}}</td>
-                    <td>{{salary}}</td>
-                    <td>{{role}}</td>
-                    <td class="text-center"><button class="btn btn-danger"><a href="/login/admin/delete/{{_id}}">Delete</a></button>
-                    </td>
-                    <td class="text-center"><button class="btn btn-warning"><a href="/login/admin/update/{{_id}}">Update</a></button>
-                    </td>
-                </tr>
-                {{/each}}
-            </table>
-            {{/if}}
-        </div>
     </div>
 
-
+    <div class="border">
+    <div class="userList">
+        {{#if users}}
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>E-mail</th>
+                <th>Country</th>
+                <th>Address</th>
+                <th>Zip</th>
+                <th>Salary</th>
+                <th>Role</th>
+                <th>Delete</th>
+                <th>Update</th>
+            </tr>
+            {{#each users}}
+            <tr>
+                <td>{{name}}</td>
+                <td>{{email}}</td>
+                <td>{{country}}</td>
+                <td>{{address}}</td>
+                <td>{{zip}}</td>
+                <td>{{salary}}</td>
+                <td>{{role}}</td>
+                <td><button class="btn btn-danger"><a href="/login/admin/delete/{{_id}}">Delete</a></button></td>
+                <td><button class="btn btn-warning"><a href="/login/admin/update/{{_id}}">Update</a></button></td>
+            </tr>
+            {{/each}}
+        </table>
+        {{/if}}
+    </div>
 </div>
-
+</form>
 </div>
-
-
+</div>
+</div>
 </div>
