--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,12 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Management System</title>
+    <title>Shopify</title>
     {{!-- Bootstrap link --}}
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-       <link rel="stylesheet" href="/css/style.css">
+       <link rel="stylesheet" href="/css/main.css">
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+       {{!-- <link rel='icon' href='public/images/favicon.ico' type='image/x-icon'/ > --}}
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-things">
+  <div class="container">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav text-center me-auto mb-2 mb-lg-0">
+        
+        <li><a href="/"><img height="35px" src="../images/shopifyLogo.png" alt="logo"></a> </li>
+        
+
+        <li class="nav-item">
+          <a class="nav-link active mx-5" aria-current="page" href="/">Home</a>
+        </li>
+        
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#">About</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link mx-5" aria-current="page" href="#">Contact</a>
+        </li>
+        
+       
+      </ul>
+      <span>
+        <a class="btn btn-primary mx-3" href="/login">Login</a>
+        <a class="btn btn-success" href="/register">Sign Up</a>
+      </span>
+    </div>
+  
+</nav>
+
     {{{body}}}
+   
 </body>
 </html>
