--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,60 +1,21 @@
-
-
-{{#if messages.falseEntered}}
+<div class="login-form-container border p-5">
+{{#if messages.falseEntry}}
   <div class='alert alert-warning text-center  mt-3 mb-3' role='alert'>
-    <h4 class="font-weight-bolder m-0">{{messages.failMessage}}</h4>
+    <h4 class="font-weight-bolder m-0">{{messages.errorMessage}}</h4>
   </div>
 {{/if}}
 
 
   <form id='signup' action='/login' method='POST'>
-    <h1>
-      Log In
-    </h1>
-    <hr />
-    <label for='E-mail'>
-      <b>
-        E-Mail
-      </b>
-    </label>
-    <input class='input' type='text' name='email' required />
-
-    <label for='psswrd'>
-      <b>
-        Password
-      </b>
-    </label>
-    <input 
-    class="input"
-      type='password'
-      name='password'
-      required
-    />
-    
-    <button class='buttons' type='submit'>
-      Submit
-    </button>
-    <a href='/passwordRecovery' class='buttons-submit' type='submit'>
-      Forgot Password?
-    </a>
-    
-     <a href='/register' class='buttons-submit' type='submit'>
-      Click here if you want to register!
-    </a>
-
-    
-    {{!-- Terms & agreements --}}
-                <div class="col-md-12 my-4">
-                    <div class="form-group">
-                        <div class="w-100">
-                               
-                            <label class="checkbox-wrap checkbox-primary w-100">
-                                I agree all statements in terms of service
-                               <input type="checkbox" unchecked>
-                                <span class="checkmark">
-                                    </span>
-                            </label>
-                        </div>
-                    </div>
-                </div>
+  <img height="35px" src="/images/shopifyLogo.svg" alt="logo">
+    <h1 class="text-center py-2">Log In</h1>
+    <p>Continue to your store</p>
+    <label for='E-mail'><b> E-Mail</b> </label>
+    <input type='text' name='email' placeholder="Enter your email" required />
+    <label for='psswrd'><b>Password </b></label>
+    <input type='password' name='password' placeholder="Enter your password" required />
+    <button class='btn btn-primary my-4' type='submit'> Next </button>
+     <a href='/register' class='btn text-success' type='submit'> Start Free Trial! </a>
   </form>
+
+  </div>
