--- a/views/productUpdate.hbs
+++ b/views/productUpdate.hbs
@@ -1,7 +1,6 @@
 <div class="col-md-4 mx-auto">
   <div class="card">
     <div class="card-header">
-      <h3>Update Product</h3>
     </div>
     <div class="card-body">
       <form action="/login/user/update/{{update.id}}?_method=PUT" method="POST">
@@ -23,8 +22,8 @@
           <input name="quantity" class="form-control" value="{{update.quantity}}"></input>
         </div>
         <div class="form-group">
-          <button class="btn btn-primary btn-block" type="submit">
-            Save
+          <button class="btn btn-warning btn-block mt-4" type="submit">
+            Update
           </button>
         </div>
       </form>
