--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -46,8 +46,8 @@
        <label for="inputRole" class="form-label"><b></b></label>
       <select class="form-select" aria-label="Default select example" name="role" required>
         <option></option>
-        <option value="Administrator">Administrator</option>
-        <option value="Employee">Employee</option>
+        <option value="administrator">Administrator</option>
+        <option value="employee">Employee</option>
       </select>
     </div>
 
