--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -23,8 +23,8 @@
     <label>Role</label>
     <select class="form-select" aria-label="Default select example" name="role" required>
         <option selected>Choose</option>
-        <option value="Administrator">Administrator</option>
-        <option value="Employee">User</option>
+        <option value="administrator">Administrator</option>
+        <option value="employee">User</option>
     </select>
     <br>
     <div>
